<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search"
        android:title="@string/search_hint"
        android:icon="@drawable/ic_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/menu_management"
        android:title="@string/management_title"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_settings"
        android:title="@string/settings_title"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_refresh"
        android:title="@string/action_refresh"
        app:showAsAction="never" />
</menu>
