<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="com.kosherstore.privateappstore.ui.main.MainFragment"
        android:label="@string/app_name">
        <action
            android:id="@+id/action_main_to_detail"
            app:destination="@id/appDetailFragment" />
        <action
            android:id="@+id/action_main_to_management"
            app:destination="@id/managementFragment" />
        <action
            android:id="@+id/action_main_to_categoryDetail"
            app:destination="@id/categoryDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/categoryDetailFragment"
        android:name="com.kosherstore.privateappstore.ui.category.CategoryDetailFragment"
        android:label="{categoryName}">
        <argument
            android:name="categoryName"
            app:argType="string" />
        <action
            android:id="@+id/action_categoryDetail_to_detail"
            app:destination="@id/appDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/appDetailFragment"
        android:name="com.kosherstore.privateappstore.ui.detail.AppDetailFragment"
        android:label="@string/app_details_title">
        <argument
            android:name="packageName"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/managementFragment"
        android:name="com.kosherstore.privateappstore.ui.management.ManagementFragment"
        android:label="@string/management_title">
        <action
            android:id="@+id/action_management_to_detail"
            app:destination="@id/appDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.kosherstore.privateappstore.ui.settings.SettingsFragment"
        android:label="Settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/downloadsFragment"
        android:name="com.kosherstore.privateappstore.ui.downloads.DownloadsFragment"
        android:label="Downloads"
        tools:layout="@layout/fragment_downloads">
        <action
            android:id="@+id/action_downloads_to_detail"
            app:destination="@id/appDetailFragment" />
    </fragment>
</navigation>
